--- a/manuscripts/child-documents/introduction.Rmd
+++ b/manuscripts/child-documents/introduction.Rmd
@@ -25,6 +25,7 @@ In individual neurons, the refractory period following an action potential natur
 Neuronal networks in the cerebral cortex support several families of oscillations (oscillatory bands) that act relatively independently, are continuously present, and span from approximately 0.05 Hz to 500 Hz, covering more than four orders of magnitude on a temporal scale [@buzsaki_RhythmsBrain_2011; @buzsakidraguhn_NeuronalOscillationsCortical_2004; @buzsakiwatson_BrainRhythmsNeural_2012]. These oscillatory bands follow a hierarchical system defined by frequency bands with logarithmically increasing centre frequencies and relatively constant frequency width ratios between neighbouring bands (Figure \@ref(fig:oscillatory-bands-plot)), leading to a separation of oscillatory bands [@penttonenbuzsaki_NaturalLogarithmicRelationship_2003]. Each oscillatory band is characterized by a distinct temporal processing window determined by its frequency, and several rhythms can temporally coexist, compete, or otherwise interact with each other in the same or different neuronal populations [@buzsaki_RhythmsBrain_2011; @buzsakidraguhn_NeuronalOscillationsCortical_2004]. The number of neurons that can participate in a given rhythm is constrained by the slow axon conduction velocity of neurons; thus, relative to higher frequency oscillations, lower frequency oscillations involve more neurons and are associated with larger membrane potential fluctuations because in longer temporal windows the action potentials of many more presynaptic neurons can be integrated [@buzsakiwatson_BrainRhythmsNeural_2012]. Because of this structural constraint, when multiple oscillations are present simultaneously, the phase of slower oscillations modulates the amplitude of faster oscillations [@buzsakiwatson_BrainRhythmsNeural_2012].
 
 ```{r oscillatory-bands-plot}
+#| fig.height: 3.630290
 #| fig.cap: "Oscillatory bands in the cerebral cortex follow a linear progression of frequencies on the natural logarithmic scale with relatively constant ratios between neighbouring bands [@penttonenbuzsaki_NaturalLogarithmicRelationship_2003]. The lower and upper limits of neighbouring bands overlap, resulting in a frequency coverage of more than four orders of magnitude on a temporal scale. For each band, the approximate bandwidth and centre frequency is shown along with its commonly used name."
 knitr::include_graphics(here::here("figures", "oscillatory-bands-plot.png"))
 ```
@@ -56,6 +57,7 @@ The purpose of functional connectivity analysis is to (at least partly) quantify
 Ongoing oscillations---reflecting synchronized rhythmic fluctuations in the excitability of local neuronal populations---are the most prominent feature of all neural signals and can be described by three pieces of information: frequency, amplitude, and phase [@cohen_AnalyzingNeuralTime_2014; @cohen_WhereDoesEEG_2017; @luck_IntroductionEventrelatedPotential_2014]. Frequency is the number of oscillatory cycles per second and is measured in hertz (Hz); it describes the speed or timescale of an oscillation. Amplitude is the peak to trough distance of an oscillation and is measured in arbitrary units (AU) or percent change from baseline for fMRI, and microvolts (mV) for EEG; it generally has an inverse relationship with frequency such that higher frequency oscillations have lower amplitudes, and vice versa. Phase is the timing of an oscillation relative to where it is along its oscillatory cycle and is measured in radians or degrees; it is independent of amplitude, so the neural dynamics reflected in amplitude are distinct from those reflected in phase [@cohen_AnalyzingNeuralTime_2014]. These properties of an oscillation are illustrated in Figure \@ref(fig:oscillation-plot), which depicts two sinusoidal waves with the same amplitude (1 AU) and phase (0 degrees) but different frequencies (1 Hz and 2 Hz) evolving over the course of one second in both Cartesian and polar coordinates.
 
 ```{r oscillation-plot}
+#| fig.height: 3.630290
 #| fig.cap: The three properties that define oscillations---frequency, amplitude, and phase---depicted in Cartesian (A) and polar (B) coordinates using 1 Hz and 2 Hz sinusoidal waves that share the same amplitude (1 AU) and phase (0 degrees). For the polar coordinates, 0.0625 second samples of each sinusoidal wave are depicted instead of continuous time for visual clarity; the length of each line corresponds to the absolute amplitude at a given time point, and the angle corresponds to the phase.
 knitr::include_graphics(here::here("figures", "oscillation-plot.png"))
 ```
@@ -113,15 +115,17 @@ fMRI functional connectivity challenges: @bijsterboschetal_ChallengesFutureDirec
 To date, two distinct modes of same-frequency intrinsic coupling have been identified throughout the EEG literature: *phase coupling* and *amplitude coupling* [@engeletal_IntrinsicCouplingModes_2013; @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020]. Phase coupling involves the timing of rhythmic neuronal activity and is defined as the coupling between the phases of two signals, estimated by the consistency of their phase angle differences (i.e., phase lags) over time [@mostamesadaghiani_PhaseAmplitudecouplingAre_2020; @stametal_PhaseLagIndex_2007]. Many distinct metrics have been developed to quantify phase coupling between two signals, each of which differ in their assumptions, motivations, availability in statistical software, and popular usage; however, what they have in common is their basic aim to capture and quantify different properties of the consistency of the distribution of phase angle differences over time [@bastosschoffelen_TutorialReviewFunctional_2016].[^2] To clarify this concept, we simulated two scenarios depicting how the consistency of phase angle differences behaves for phase-coupled signals (Figure \@ref(fig:phase-plot)A) and independent signals (Figure \@ref(fig:phase-plot)B). For Figure \@ref(fig:phase-plot)A, we generated two 5 Hz sinusoidal waves with an initial phase of 145 degrees (Signal 1) and 25 degrees (Signal 2) and uncorrelated Gaussian white noise added to each signal, then calculated the instantaneous phase angle difference between the signals at each time point. For Figure \@ref(fig:phase-plot)B, the instantaneous phase angle difference was instead calculated between Signal 1 and a third signal of Gaussian white noise (Signal 3). A narrow peak in the instantaneous phase angle difference distribution can be observed with the phase-coupled signals (Figure \@ref(fig:phase-plot)A), in contrast to the relatively even distribution of instantaneous phase angle differences with the independent signals (Figure \@ref(fig:phase-plot)B).
 
 ```{r phase-plot}
+#| fig.height: 5.445434
 #| fig.cap: Illustration of instantaneous phase angle differences between two phase-coupled signals (A) and independent signals (B). The top plots in each panel depict the time course of two 5 Hz signals with a 145 degree phase (Signal 1) and 25 degree phase (Signal 2), and Gaussian white noise (Signal 3). The polar histogram plots depict the distribution of instantaneous phase angle differences between phase-coupled Signals 1 and 2 (A) and independent Signals 1 and 3 (B); a narrow peak in the instantaneous phase angle difference distribution can be observed with the phase-coupled signals, in contrast to the relatively even distribution of instantaneous phase angle differences with the independent signals.
 knitr::include_graphics(here::here("figures", "phase-plot.png"))
 ```
 
-Stable, state-invariant local and long range phase coupling has been observed across all oscillatory bands at both zero and nonzero phase lags using a variety of phase coupling metrics [@engeletal_IntrinsicCouplingModes_2013]. The role of phase coupling in neuronal communication is fairly well-understood; as we described earlier, effective neuronal communication requires rhythmic synchronization within presynaptic and postsynaptic networks and coherence between them so that inputs consistently arrive during oscillatory phases of enhanced postsynaptic excitability, maximizing the probability they summate effectively and generate action potentials [@buzsaki_RhythmsBrain_2011; @buzsakiwatson_BrainRhythmsNeural_2012; @fries_RhythmsCognitionCommunication_2015; @singer_NeuronalOscillationsUnavoidable_2018]. Finally, we note that although it is also possible to assess phase coupling between fMRI BOLD signals [@honarietal_EvaluatingPhaseSynchronization_2021], the use of these methods in the fMRI literature is incredibly rare and completely absent in the context of network variant research; thus, phase coupling is generally regarded as a coupling mode unique to electrophysiological methods such as EEG/MEG/ECoG [@engeletal_IntrinsicCouplingModes_2013].
+Stable, state-invariant local and long range phase coupling has been observed across all oscillatory bands at both zero and nonzero phase lags using a variety of phase coupling metrics [@engeletal_IntrinsicCouplingModes_2013]. The role of phase coupling in neuronal communication is fairly well-understood; as we described earlier, effective neuronal communication requires rhythmic synchronization within presynaptic and postsynaptic networks and coherence between them so that inputs consistently arrive during oscillatory phases of enhanced postsynaptic excitability, maximizing the probability they summate effectively and generate action potentials [@buzsaki_RhythmsBrain_2011; @buzsakiwatson_BrainRhythmsNeural_2012; @fries_RhythmsCognitionCommunication_2015; @singer_NeuronalOscillationsUnavoidable_2018]. Finally, we note that although it is also possible to assess phase coupling between fMRI BOLD signals [@honarietal_EvaluatingPhaseSynchronization_2021], the use of these methods in the fMRI literature is incredibly rare and completely absent in the context of network variant research; thus, phase coupling is generally regarded as a coupling mode unique to electrophysiological methods such as EEG/MEG [@engeletal_IntrinsicCouplingModes_2013].
 
 Amplitude coupling involves the number of neurons active in a given rhythm and is defined as the coupling between the amplitude envelopes of two signals, estimated by the correlation of their amplitude envelopes over time [@brunsetal_AmplitudeEnvelopeCorrelation_2000; @hippetal_LargescaleCorticalCorrelation_2012; @mostamesadaghiani_PhaseAmplitudecouplingAre_2020]. This is similar in principle to fMRI BOLD functional connectivity analysis---wherein coupling between two BOLD signals is assessed by the correlation of their amplitudes over time---as both methods can be used to capture slow fluctuations in neural activity [@engeletal_IntrinsicCouplingModes_2013]. To clarify this concept, we simulated 1000 realizations of two amplitude modulated signals consisting of either a 30 Hz or 50 Hz sinusoidal wave modulated by a 3 Hz sinusoidal wave, with Gaussian white noise added to both the carrier and modulating waves; for each realization, we then estimated the absolute correlation coefficient between either the real signals or their amplitude envelopes. Figure \@ref(fig:amplitude-plot)A illustrates the basic mechanism behind amplitude modulation, wherein the phase dynamics of a low frequency signal modulates the amplitude of a higher frequency signal, and of how this is captured in the amplitude envelope of the amplitude modulated signal. Figure \@ref(fig:amplitude-plot)B displays the simulation results. A strong correlation can be observed between the low frequency amplitude envelopes of the two signals, in contrast to the correlations between the high frequency real signals which are clustered around zero.
 
 ```{r amplitude-plot}
+#| fig.height: 5.445434
 #| fig.cap: Illustration of amplitude modulation (A) and the difference between the amplitude correlation and amplitude envelope correlation of high frequency signals. Panel A depicts how the amplitude envelope of an amplitude modulated signal captures the phase dynamics of a low frequency modulating signal. Panel B displays the simulation results; a strong correlation can be observed between the amplitude envelopes of the two signals, in contrast to the correlations between the real signals which are clustered around zero.
 knitr::include_graphics(here::here("figures", "amplitude-plot.png"))
 ```
@@ -244,6 +248,7 @@ We chose to examine sensor-space (rather than source-space) connectivity here be
 This dataset was particularly well-suited to address this question, given that we had sufficient data per participant, session, and state to examine how much and in which ways functional connectome similarity differed within and between individuals via the interaction of (1) session-dependent variability over the course of weeks and months, and (2) state-dependent variability over the course of minutes during different resting states. Figure \@ref(fig:similarity-archetype-plots) depicts six hypothetical outcomes we could find based on different assumptions about the underlying global network activity. The left column shows outcomes that would occur in cases where functional connectomes *do not* differ between individuals. In particular, we might expect to see (1) a *group effect* with high similarity among all measurements regardless of individual, session, or state, which might occur if the underlying activity we measured is largely intrinsic and common across individuals [cf. @raichle_TwoViewsBrain_2010]; (2) a *group-session effect* with high similarity among all measurements regardless of individual or state, but not session, which might occur if the underlying activity we measured is largely intrinsic, common across individuals, and varies over time in the same way across individuals; or (3) a *group-state effect* with high similarity among all measurements regardless of individual or session, but not state, which might occur if the underlying activity we measured is largely reactive in a way that is common across individuals [cf. @raichle_TwoViewsBrain_2010]. The right column shows outcomes that would occur in cases where functional connectomes *do* differ between individuals. In particular, we might expect to see (4) an *individual effect* with high similarity among all measurements regardless of session or state, but not individual, which might occur if the underlying activity we measured is largely intrinsic and unique within individuals; (5) an *individual-session effect* with high similarity among all measurements regardless of state, but not individual or session, which might occur if the underlying activity we measured is largely intrinsic, unique within individuals, and varies over time within individuals; or (6) an *individual-state effect* with high similarity among all measurements regardless of session, but not individual or state, which might occur if the underlying activity we measured is largely reactive in a way that is unique within individuals.
 
 ```{r similarity-archetype-plots}
+#| fig.height: 7.865627
 #| fig.cap: Similarity matrices depicting six hypothetical outcomes of functional connectome similarity that could occur if brain activity is common across individuals (group, group-session, or group-state effects) or unique within individuals (individual, individual-session, or individual-state effects).
 targets::tar_load(similarity_archetypes_figure)
 knitr::include_graphics(here::here(similarity_archetypes_figure))
@@ -252,6 +257,7 @@ knitr::include_graphics(here::here(similarity_archetypes_figure))
 To quantify these effects, we used pairwise contrasts to estimate how much and in which ways functional connectome similarity differed within and between individuals across sessions and states. Figure \@ref(fig:contrasts-plot) illustrates these contrasts as they relate to the six hypothetical outcomes depicted in Figure \@ref(fig:similarity-archetype-plots) above. These contrasts were the estimands [i.e., the target quantities\; @lundbergetal_WhatYourEstimand_2021] of this study, with differences estimated for (1) the overall difference in similarity within and between participants, which we term the *main effect*; (2) the difference in similarity within and between participants for each level of one predictor (e.g., within session similarity) while averaging over levels of the other predictor (e.g., within and between state similarity); (3) the difference in similarity within and between participants for the unique combinations within and between session and state. As Figure \@ref(fig:contrasts-plot) makes clear, when there are equal amounts of functional connectome similarity within and between participants (i.e., when the underlying activity is common across individuals) there is zero difference in functional connectome similarity within versus between participants regardless of the underlying group, session, or state effects; however, when functional connectomes are more similar within than between participants (i.e., when the underlying activity is unique within individuals) there is a positive, non-zero difference which varies according to the type of individual effect (individual, individual-session, or individual-state effects). Thus, under this approach, a necessary condition for network variants to be detected is a positive, non-zero difference in functional connectome similarity.
 
 ```{r contrasts-plot}
+#| fig.height: 5.445434
 #| fig.cap: Contrasts illustrating differences in functional connectome similarity across the six hypothetical outcomes depicted in Figure \@ref(fig:similarity-archetype-plots). When brain activity is common across individuals (group, group-session, or group-state effects) there is zero difference in functional connectome similarity within versus between individuals; however, when brain activity is unique within individuals (individual, individual-session, or individual-state effects) there is a positive, non-zero difference which varies according to the type of individual effect.
 knitr::include_graphics(here::here("figures/contrasts-plot.png"))
 ```
@@ -261,6 +267,8 @@ Here we focus on the estimation of the direction, strength, and uncertainty of t
 It is likely that the real data will be representative of more than one of the hypothetical outcomes illustrated in Figures \@ref(fig:similarity-archetype-plots) and \@ref(fig:contrasts-plot). Figure \@ref(fig:outcome-plot) illustrates what this might look like should the individual, individual-session, and individual-state effects be equally represented in the underlying global network activity, based on the simple averaging of each effects' contrasts. We emphasize that this illustration represents an unrealistic scenario where each individual's functional connectomes are perfectly similar with themselves and perfectly dissimilar with others; therefore, the magnitude of these effect sizes is greatly exaggerated. In reality, we would expect to find smaller effect sizes whose magnitudes decrease as the dynamics of underlying global network activity becomes more similar across individuals. Moreover, it is rather unlikely that the individual, individual-session, and individual-state effects would be equally weighted; thus, we would also expect to find an additional degree of variation in this hypothetical pattern of results based on the relative contribution of these effects to the stability of functional connectome similarity within individuals across sessions and states [@grattonetal_FunctionalBrainNetworks_2018]. We illustrate the relative influence of these effects in the second, third, and fourth plots of Figure \@ref(fig:outcome-plot). In the second plot we see that as the individual effect makes a greater relative contribution, the magnitude of effect sizes across all contrasts becomes greater; whereas, in the third and fourth plots we see that as either the individual-session or individual-state effects make a greater relative contribution, an additional degree of effect size variation appears with both more and less pronounced differences in functional connectome similarity occurring across sessions and states.
 
 ```{r outcome-plot}
+#| fig.width: 5.666667
+#| fig.height: 7.086614
 #| fig.cap: Illustrations of still-exaggerated but more realistic hypothetical outcomes of individual differences in functional connectome similarity, based on the simple and weighted averaging of the individual, individual-session, and individual-state effect contrasts. The weights corresponding respectively to each effect are $\frac{1}{3}, \frac{1}{3}, \frac{1}{3}$ (first plot); $\frac{4}{6}, \frac{1}{6}, \frac{1}{6}$ (second plot); $\frac{2}{6}, \frac{3}{6}, \frac{1}{6}$ (third plot); and $\frac{2}{6}, \frac{1}{6}, \frac{3}{6}$ (fourth plot).
 knitr::include_graphics(here::here("figures/outcome-plot.png"))
 ```
