--- a/manuscripts/child-documents/methods.Rmd
+++ b/manuscripts/child-documents/methods.Rmd
@@ -31,9 +31,9 @@ runtime <- targets::tar_meta(fields = "seconds") |>
   papaja::print_num()
 ```
 
-All computational steps were done using the open source programming language R [version `r r_version`, <https://www.R-project.org/>\; @R-base]. We maintained a reproducible workflow for the entire pipeline---from data cleaning to reporting---using the targets package [@R-targets], and managed R and Python dependencies using the renv package [@R-renv]. All EEG preprocessing and functional connectivity analysis was done using the open source Python package MNE-Python [version 2.2.0, <https://doi.org/10.5281/zenodo.4338426>\; @gramfortetal_MEGEEGData_2013], which was called from R using the reticulate package [@R-reticulate]. We estimated the RV coefficient using the FactoMineR package [@R-FactoMineR], and fit the mixed beta regression and contrasts using the glmmTMB [@R-glmmTMB] and emmeans [@R-emmeans] packages, respectively. The DHARMa [@R-DHARMa] and performance [@R-performance] packages were used for model diagnostics. All data visualization was done with a combination of the ggplot2 [@R-ggplot2], ggdist [@R-ggdist], ggh4x [@R-ggh4x], ggnewscale [@R-ggnewscale], and patchwork [@R-patchwork] packages; and all tables were made with a combination of the flextable [@R-flextable], ftExtra [@R-ftExtra], and gtsummary [@R-gtsummary] packages. Other computations were done using the tidyverse [@R-tidyverse] suite of packages. Finally, this manuscript itself was written in R Markdown [@R-rmarkdown] using the papaja package's APA template [@R-papaja], and all reported numbers, figures, and tables were printed using inline code to ensure their accuracy.
+All computational steps were done using the open source programming language R [version `r r_version`, <https://www.R-project.org/>\; @R-base]. We maintained a reproducible workflow for the entire pipeline---from data cleaning to reporting---using the targets package [@R-targets], and managed R and Python dependencies using the renv package [@R-renv]. All EEG preprocessing and functional connectivity analysis was done using the open source Python package MNE-Python [version 2.2.0, <https://doi.org/10.5281/zenodo.4338426>\; @gramfortetal_MEGEEGData_2013], which was called from R using the reticulate package [@R-reticulate]. We estimated the RV coefficient using the FactoMineR package [@R-FactoMineR], and fit the mixed beta regression and contrasts using the glmmTMB [@R-glmmTMB] and emmeans [@R-emmeans] packages, respectively. The DHARMa [@R-DHARMa] and performance [@R-performance] packages were used for model diagnostics. All data visualization was done with a combination of the ggplot2 [@R-ggplot2], ggdist [@R-ggdist], ggh4x [@R-ggh4x], ggnewscale [@R-ggnewscale], and patchwork [@R-patchwork] packages; and all tables were made with a combination of the flextable [@R-flextable], ftExtra [@R-ftExtra], and gtsummary [@R-gtsummary] packages. Other computations were done using the tidyverse [@R-tidyverse] suite of packages. Finally, this manuscript itself was written in R Markdown [@R-rmarkdown] using officedown [@R-officedown] with the papaja package's APA template [@R-papaja], and all reported numbers, figures, and tables were printed using inline code to ensure their accuracy.
 
-The total computation time for the entire targets pipeline was approximately `r runtime` hours. A complete record of the R environment and packages used in this study can be found in Tables \@ref(tab:session-info-environment) and \@ref(tab:session-info-packages) in the appendix. All code used in this study is openly available, licensed under the MIT License, and can be accessed at the study's GitHub repository <https://github.com/mccarthy-m-g/mccarthy-20XX> or Open Science Framework (OSF) repository <https://osf.io/xztdk/> (DOI: <https://doi.org/10.5281/zenodo.6578410>). A copy of this licence and its terms can be found in the study's GitHub or OSF repository.
+The total computation time for the entire targets pipeline was approximately `r runtime` hours. A complete record of the R environment and packages used in this study can be found in Tables B\@ref(tab:session-info-environment) and B\@ref(tab:session-info-packages) in Appendix B. All code used in this study is openly available, licensed under the MIT License, and can be accessed at the study's GitHub repository <https://github.com/mccarthy-m-g/mccarthy-20XX> or Open Science Framework (OSF) repository <https://osf.io/xztdk/> (DOI: <https://doi.org/10.5281/zenodo.6578410>). A copy of this licence and its terms can be found in the study's GitHub or OSF repository.
 
 ## EEG preprocessing
 
@@ -99,7 +99,7 @@ We estimated the cross spectral density between two signals $x$ and $y$ using mu
 
 The phase lag index takes values between 0 and 1. A value of 0 indicates either no phase coupling or phase coupling with a phase angle difference centred around 0 or 180 degrees, and a value of 1 indicates perfect phase coupling with a consistent nonzero phase angle difference. By only considering consistent nonzero phase angle differences as indicators of phase coupling between two sensors, the phase lag index ignores phase coupling that could be explained by volume conduction from a single common source (at the cost of also ignoring non-spurious zero lag coupling), making it a sound measure of the interactions between different underlying neural sources [@stametal_PhaseLagIndex_2007].
 
-Finally, to examine the sensitivity of our analyses to different spectral analysis approaches [cf. @bruns_FourierHilbertWaveletbased_2004], we also estimated the phase lag index using the Hilbert transform method [@stametal_PhaseLagIndex_2007]. The results of these analyses are presented in Appendix A.
+Finally, to examine the sensitivity of our analyses to different spectral analysis approaches [cf. @bruns_FourierHilbertWaveletbased_2004], we also estimated the phase lag index using the Hilbert transform method [@stametal_PhaseLagIndex_2007]. The results of these analyses are shown in Figures A\@ref(fig:phase-similarity-plots-hilbert-delta) to A\@ref(fig:phase-similarity-plots-hilbert-gamma) in Appendix A.
 
 ```{r rfftfreq, eval=FALSE}
 n_times <- 1000
@@ -192,7 +192,7 @@ We use similarity matrices to examine the similarities of functional connectomes
 
 We used a mixed beta regression to model how functional connectome similarity varied between and within individuals, sessions, and states at the group-level for each frequency band [for an accessible overview of mixed beta regression, see @doumaweedon_AnalysingContinuousProportions_2019; @heiss_GuideModelingProportions_2021]. The unit of observation was the pair of functional connectomes used for a given similarity estimate. The response variable was the RV coefficient estimated for each pair, which was modelled with a beta distribution and related to the predictors with the logit link function following the parameterization of @cribari-netozeileis_BetaRegression_2010 and @ferraricribari-neto_BetaRegressionModelling_2004. The predictors were binary indicators (where $0 = \textrm{No}$ and  $1 = \textrm{Yes}$) for whether a pair was within participant, within session, or within state, and their interactions. Because the RV coefficient estimates are based on the similarity of pairs of functional connectomes we accounted for statistical dependencies between observations by adding random intercepts to the model. All random effects were assumed to be normally distributed [@brooksetal_GlmmTMBBalancesSpeed_2017].
 
-We fit two versions of this model, which differed slightly in their random effects specification: A *maximal model* (@barretal_RandomEffectsStructure_2013) with random intercepts for both the $\mathbf{X}$ and $\mathbf{Y}$ connectome that each observation came from to account for statistical dependencies between observations that had a connectome in common, and a random intercept for the participant pair to account for the repeated observation of the same participant pairs; and a *reduced model* with only random intercepts for both the $\mathbf{X}$ and $\mathbf{Y}$ connectome that each observation came from. The reduced models were fit for pragmatic reasons, due to convergence problems with several of the maximal models where the estimate for the variance of the participant pair parameter was zero (i.e., the fit was singular). The effect of not including participant pair was negligible for point estimates, which were similar or equivalent between models where it was and was not included; but was noticeable for interval estimates, which were generally wider by a factor of two to four when it was included compared to when it was not included. This difference did not meaningfully change the conclusions drawn from our results, however. Results from the reduced models are presented in the results section of this manuscript for parsimony across sections, and results from the maximal models are shown in Figures \@ref(fig:phase-similarity-plots-maximal-theta) to \@ref(fig:phase-similarity-plots-hilbert-maximal-gamma) in Appendix A.
+We fit two versions of this model, which differed slightly in their random effects specification: A *maximal model* (@barretal_RandomEffectsStructure_2013) with random intercepts for both the $\mathbf{X}$ and $\mathbf{Y}$ connectome that each observation came from to account for statistical dependencies between observations that had a connectome in common, and a random intercept for the participant pair to account for the repeated observation of the same participant pairs; and a *reduced model* with only random intercepts for both the $\mathbf{X}$ and $\mathbf{Y}$ connectome that each observation came from. The reduced models were fit for pragmatic reasons, due to convergence problems with several of the maximal models where the estimate for the variance of the participant pair parameter was zero (i.e., the fit was singular). The effect of not including participant pair was negligible for point estimates, which were similar or equivalent between models where it was and was not included; but was noticeable for interval estimates, which were generally wider by a factor of two to four when it was included compared to when it was not included. This difference did not meaningfully change the conclusions drawn from our results, however. Results from the reduced models are presented in the results section of this manuscript for parsimony across sections, and results from the maximal models are shown in Figures A\@ref(fig:phase-similarity-plots-maximal-theta) to A\@ref(fig:phase-similarity-plots-hilbert-maximal-gamma) in Appendix A.
 
 The fit of the model was assessed using the following diagnostics: Posterior predictive checks---wherein we simulated replicated data under the fitted model and compared these to the observed data---were used to check for systematic differences between the fitted model and observed data [@gelmanetal_BayesianDataAnalysis_2013; @gelmanetal_RegressionOtherStories_2020; @gelmanhill_DataAnalysisUsing_2006]. Randomized quantile residuals plotted against uniform distribution quantiles were used to check for signs of model misspecification [@dunnsmyth_RandomizedQuantileResiduals_1996; @hartiglohse_DHARMaResidualDiagnostics_2022]. Quantiles of the random effects plotted against standard normal distribution quantiles were used to check if the random effects were normally distributed; however, generalized linear mixed effects models have a large degree of robustness against misspecifying the shape of the random effects distribution [see @mccullochneuhaus_MisspecifyingShapeRandom_2011]. Variance Inflation Factors were used to check for multicollinearity between the predictors [@foxmonette_GeneralizedCollinearityDiagnostics_1992; @marcoulidesraykov_EvaluationVarianceInflation_2019; @obrien_CautionRegardingRules_2007], where a value of less than five as indicated low multicollinearity between the predictors, values between five and ten moderate, and values greater than ten high and not tolerable [@jamesetal_IntroductionStatisticalLearning_2021].
 
@@ -206,7 +206,7 @@ In addition, to assist readers unfamiliar with the analytic approach we have tak
 
 ### Individual-level functional connectome similarity contrasts
 
-To explore how well the group-level model and contrasts represented individual differences in our sample, we also fit a mixed beta regression for each participant, following the same parameterization as both the reduced and maximal group-level models. These individual-level models were followed-up using the same pairwise contrasts as in the group-level model, and comparisons between the group-level and individual-level contrasts were done visually. Results from the reduced and maximal models are presented in Appendix A.
+To explore how well the group-level model and contrasts represented individual differences in our sample, we also fit a mixed beta regression for each participant, following the same parameterization as both the reduced and maximal group-level models. These individual-level models were followed-up using the same pairwise contrasts as in the group-level model, and comparisons between the group-level and individual-level contrasts were done visually. Results from the individual-level models are briefly summarized in the results section of this manuscript, and results from each individual-level model are shown in Appendix A (for reduced models, see Figures A\@ref(fig:phase-similarity-subset-plots-delta)-A\@ref(fig:amplitude-similarity-subset-plots-alpha); for maximal models, see Figures A\@ref(fig:phase-similarity-plots-maximal-theta)-A\@ref(fig:phase-similarity-plots-hilbert-maximal-gamma)).
 
 #### Interpreting individual-level contrasts
 
