--- a/manuscripts/packages.bib
+++ b/manuscripts/packages.bib
@@ -95,6 +95,22 @@ Regression Models},
   url = {https://CRAN.R-project.org/package=gtsummary},
 }
 
+@Manual{R-officedown,
+  title = {officedown: Enhanced R Markdown Format for Word and PowerPoint},
+  author = {David Gohel and Noam Ross},
+  year = {2023},
+  note = {R package version 0.3.1},
+  url = {https://CRAN.R-project.org/package=officedown},
+}
+
+@Manual{R-officer,
+  title = {officer: Manipulation of Microsoft Word and PowerPoint Documents},
+  author = {David Gohel},
+  year = {2023},
+  note = {R package version 0.6.3},
+  url = {https://CRAN.R-project.org/package=officer},
+}
+
 @Manual{R-papaja,
   title = {papaja: Prepare American Psychological Association Journal Articles with
 R Markdown},
