--- a/manuscripts/child-documents/discussion.Rmd
+++ b/manuscripts/child-documents/discussion.Rmd
@@ -1,29 +1,34 @@
 # Discussion
 
-In this study, we explored the feasibility of using EEG to study network variants. We tested for the presence of network variants by estimating how phase and amplitude coupling functional connectomes differ between and within individuals across different timescales using measures of network similarity, contrasting the magnitude of each of these effects across sessions and states at the group-level, and examining their consistency at the individual-level. Based on the findings of previous fMRI network variant studies, 
+In this study, we explored the feasibility of using EEG to study network variants by examining whether or not EEG phase coupling and amplitude coupling functional connectomes showed similar evidence of stable individual differences across contexts to what has been described in the fMRI literature. To address this question, we used pairwise contrasts to estimate how much and in which ways functional connectome similarity differed within and between individuals across sessions and states, using eyes open and eyes closed resting state EEG data collected across three sessions over the course of approximately three months. Based on the findings of previous fMRI network variant research [e.g., @grattonetal_FunctionalBrainNetworks_2018; @seitzmanetal_TraitlikeVariantsHuman_2019], we hypothesized that functional connectomes would be more similar within than between individuals across all contrasts, on average, with smaller variations in similarity related to session or state (see Figure \@ref(fig:outcome-plot)). <!-- We had no expectations regarding the possible range of effect sizes we could find, but again note that relatively higher values corresponded to greater within-individual functional connectome stability and between-individual differentiation across contexts; whereas relatively lower values corresponded to lesser within-individual functional connectome stability and between-individual differentiation. However, to contextualize our results against the relevant fMRI literature, we considered the results of @grattonetal_FunctionalBrainNetworks_2018 as a cautious point of reference---who found positive differences of approximately 0.2 and 0.3 points for shorter and longer fMRI scanning times, respectively---keeping in mind that finding equivalent effect sizes would be surprising, given the differences in measurement, design, and analysis between our studies, on top of random variation in the data between our samples. -->
 
-we hypothesized that functional connectomes would be more similar within than between individuals, with smaller variations in similarity related to session or state
+Overall, our results were inconclusive. In support of our primary scientific hypothesis, the group-level effect sizes most compatible with our data, given the background model, showed that, on average, both phase coupling and amplitude coupling functional connectomes were more similar within than between individuals across contexts and frequency bands (Figures \@ref(fig:phase-similarity-plots-delta)-\@ref(fig:amplitude-similarity-plots-alpha)); that our data was incompatible with a model that assumed zero difference in functional connectome similarity within and between individuals across contexts (Tables \@ref(tab:phase-similarity-table-delta)-\@ref(tab:amplitude-similarity-table-alpha)); and that these differences were attributable to individual-dependent factors with small modulations by session and state (Tables \@ref(tab:phase-similarity-table-delta)-\@ref(tab:amplitude-similarity-table-alpha)). Moreover, the magnitude of these differences varied across contexts in an expected way, with the largest differences in similarity within and between individuals occurring for functional connectomes from the same sessions and states, the smallest differences occurring for functional connectomes from the different sessions and states, and relatively smaller increases and decreases in similarity across other contexts. At this level of description, our results were broadly consistent with the findings of methodologically similar fMRI studies [e.g., @grattonetal_FunctionalBrainNetworks_2018]. These results remained largely consistent for phase coupling functional connectomes when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figures A\@ref(fig:phase-similarity-plots-hilbert-delta)-A\@ref(fig:phase-similarity-plots-hilbert-gamma)); and with few exceptions, these results were consistent between the reduced and maximal models of functional connectome similarity for both both phase coupling and amplitude coupling functional connectomes (Figures A\@ref(fig:phase-similarity-plots-maximal-theta)-A\@ref(fig:amplitude-similarity-plots-maximal-alpha)).
 
+However, in general, the group-level effect sizes most compatible with our data, given the background model, ranged from practically nil to at most small, depending on the contrast, coupling mode, and frequency band in question (Figures \@ref(fig:phase-similarity-plots-delta)-\@ref(fig:amplitude-similarity-plots-alpha)). Thus, although our results suggested that, on average, the phase coupling and amplitude coupling dynamics of underlying global network activity in each frequency band was differentiated between individuals across contexts *in our sample*, the influence of individual-dependent factors over and above the influence of stable group-dependent factors was either negligible or at best small. This is a clear departure from what has been described in the fMRI literature, where differences in functional connectome similarity within and between individuals have been reported to be stable, relatively large, and visually obvious, indicative of "a clear influence of individual features over and above common organizational principles at the network level," [@mareketal_SpatialTemporalOrganization_2018] such that fMRI functional connectomes may be well-suited for measuring and identifying the neural causes of variation in human behaviour, cognition, and their dysfunction [@grattonetal_FunctionalBrainNetworks_2018]. Our results do not inspire such confidence, and given the inherent limitations of EEG functional connectivity analysis, it is unclear to what extent they reflect genuinely small interindividual differences in electrophysiological connectivity across contexts, versus methodological limitations, selection bias, or random variation in our sample that may have caused us to underestimate or overestimate the magnitude of interindividual differences relative to the (unknown) true effect(s).
 
-we expected to find effects consistent with functional connectomes that were more similar within than between individuals, with smaller variations in similarity related to session or state---consistent with the idea that functional networks are stable and trait-like with equal amounts of common and unique variance between individuals [@grattonetal_FunctionalBrainNetworks_2018].
+Finally, we note that although the the group-level effect sizes most compatible with our data, given the background model, more similar within than between individuals, on average, this relationship was not necessarily true for all participants. Indeed, there was a notable degree of outcome variability in the direction (Figure \@ref(fig:subset-similarity-contrast-barplot)) and magnitude (for reduced models, see Figures A\@ref(fig:phase-similarity-subset-plots-delta)-A\@ref(fig:amplitude-similarity-subset-plots-alpha); for maximal models, see Figures A\@ref(fig:phase-similarity-plots-maximal-theta)-A\@ref(fig:amplitude-similarity-plots-maximal-alpha)) of these effects when differences in functional connectome similarity were analyzed at an individual-level. These results were also a clear departure from what has been described in the fMRI literature, where differences in functional connectome similarity within and between individuals has been found to be consistently positive at an individual-level, with relatively little outcome variability in the magnitude of these differences [@grattonetal_FunctionalBrainNetworks_2018]. Moreover, because of the outcome variability in our sample, we caution against confusing the positive and precise estimates of average effects for the group-level contrasts with the predictability of individual outcomes, which were more variable in both their direction and magnitude. However, equally, we also caution against confusing the individual-level contrasts whose direction was unresolved with precise zero effects or evidence of no positive difference in functional connectome similarity. For many of these contrasts, the effect sizes most compatible with our data, given the background model, included a range of effects that---although generally still at most small---were not negligible; thus, even though they leave open the possibility of negative, zero, or positive but negligible effects, they also leave open the possibility of small effects that may be worth investigating further.
 
-Overall, the group-level effect sizes most compatible with our data, given the background model, showed that both phase and amplitude coupling functional connectomes were more similar within than between individuals across timescales, with the strongest differences in similarity within and between individuals occurring for functional connectomes from the same session and state, and the weakest differences occurring for functional connectomes from the different sessions and states. However, in general, these effect sizes were at most small, or were practically nil in the case of delta, theta, beta, and gamma band amplitude coupling functional connectomes, and were not consistent with the larger differences reported in the fMRI literature [cf. @grattonetal_FunctionalBrainNetworks_2018]. Moreover, these cases were often unrepresentative of the variability seen at the individual-level, where the data did not resolve whether the most compatible effect sizes were positive or negative for a considerable portion of participants at most levels of the session and state predictors across timescales. Although a number of participants did have consistently positive effect sizes---which were comparable to fMRI effect sizes in a handful of cases, but were otherwise at most small---we would not consider these results to be consistent with the stable and trait-like characterization of functional networks reported in the fMRI literature [cf. @grattonetal_FunctionalBrainNetworks_2018], given that trait-like functional networks would theoretically create consistent differences for all participants. Considered together, at most our findings provided weak supportive evidence for the presence of network variants in a subset of our sample for phase coupling functional connectomes in the theta, alpha, beta, and gamma bands, but did not generally demonstrate the feasibility of using EEG to study network variants given the inconsistencies observed across participants.
+Considered together, given the background model used to investigate our research question, our results did not generally demonstrate the feasibility of using EEG to study network variants due to the inconsistencies observed across participants in our sample. At best our findings leave open the possibility that EEG functional connectomes may be suitable measures of stable individual differences in whole brain functional network organization, given that both the group-level results and a subset of individual-level results showed consistently positive differences in functional connectome similarity within versus between individuals across contexts and frequency bands; however, equally, it is apparent that if the phase coupling and/or amplitude coupling dynamics of underlying global network activity across frequency bands are indeed influenced by stable individual-dependent factors, further work identifying and developing methods to reliably measure and quantify these stable individual differences is necessary.
 
 ## Differences between phase and amplitude coupling
 
-Across all frequency bands, we found that functional connectivity estimated with the orthogonalized amplitude envelope correlation was generally weaker than with the phase lag index. This difference has also been previously found by @fraschinietal_RobustnessFunctionalConnectivity_2019, who tested the robustness of several functional connectivity metrics for biometric person identification [for a review of EEG biometrics, see @chanetal_ChallengesFuturePerspectives_2018]. Given that the phase lag index and orthogonalized amplitude envelope correlation measure different aspects of functional connectivity, we expected them to differ [@engeletal_IntrinsicCouplingModes_2013]. However, we also note that this difference is likely partially due to differences in the frequency specificity of the two methods, with the phase lag index having greater specificity than the orthogonalized amplitude envelope correlation. This difference in frequency specificity is attributable to the phase lag index being estimated and averaged over multiple frequency bins in each frequency band when using the multitaper method, versus the orthogonalized amplitude envelope correlation being estimated with a single analytic signal in each frequency band when using the Hilbert transform method. In Appendix Figures \@ref(fig:phase-similarity-plots-hilbert-delta)-\@ref(fig:phase-similarity-plots-hilbert-gamma) we show how the results change when the phase lag index is estimated using the Hilbert transform method. Across all five frequency bands we found that (1) functional connectivity was generally lower than we found with the multitaper method, but individual patterns of connectivity were similar or the same; and (2) functional connectome similarity was generally higher than we found with the multitaper method, but patterns of similarity and contrast effect sizes were similar or the same. Thus, although these changes were not great enough to change our conclusions, they did make the differences observed between the phase lag index and orthogonalized amplitude envelope correlation results less stark, and highlight how different spectral analysis methods can influence functional connectivity estimates if analysis parameters cannot be matched [cf. @bruns_FourierHilbertWaveletbased_2004].
+<!-- TODO: Revise section and consider moving it down -->
+
+Across all frequency bands, we found that functional connectivity estimated with the orthogonalized amplitude envelope correlation was generally weaker than with the phase lag index. This difference has also been previously found by @fraschinietal_RobustnessFunctionalConnectivity_2019, who tested the robustness of several functional connectivity metrics for biometric person identification [for a review of EEG biometrics, see @chanetal_ChallengesFuturePerspectives_2018]. Given that the phase lag index and orthogonalized amplitude envelope correlation measure different aspects of functional connectivity, we expected them to differ [@engeletal_IntrinsicCouplingModes_2013]. However, we also note that this difference is likely partially due to differences in the frequency specificity of the two methods, with the phase lag index having greater specificity than the orthogonalized amplitude envelope correlation. This difference in frequency specificity is attributable to the phase lag index being estimated and averaged over multiple frequency bins in each frequency band when using the multitaper method, versus the orthogonalized amplitude envelope correlation being estimated with a single analytic signal in each frequency band when using the Hilbert transform method. In Figures A\@ref(fig:phase-similarity-plots-hilbert-delta)-A\@ref(fig:phase-similarity-plots-hilbert-gamma) in Appendix A we show how the results change when the phase lag index is estimated using the Hilbert transform method. Across all five frequency bands we found that (1) functional connectivity was generally lower than we found with the multitaper method, but individual patterns of connectivity were similar or the same; and (2) functional connectome similarity was generally higher than we found with the multitaper method, but patterns of similarity and contrast effect sizes were similar or the same. Thus, although these changes were not great enough to change our conclusions, they did make the differences observed between the phase lag index and orthogonalized amplitude envelope correlation results less stark, and highlight how different spectral analysis methods can influence functional connectivity estimates if analysis parameters cannot be matched [cf. @bruns_FourierHilbertWaveletbased_2004].
 
 Another factor possibly contributing to the differences observed between the phase lag index and orthogonalized amplitude envelope correlation was the effect of epoch length on the two methods. @fraschinietal_EffectEpochLength_2016 compared the effect of non-overlapping epochs with variable length (1, 2, 4, 6, 8, 10, 12, 14 and 16 seconds) on broadband (1-20 Hz) functional connectivity estimates in a small sample of middle-aged adults during resting eyes-closed resting state. They found that group-level mean functional connectivity was higher for the phase lag index than the orthogonalized amplitude envelope correlation at 1-6 second long epochs, with more comparable estimates between the two methods with 8-16 second long epochs. They also found that group-level mean functional connectivity decreased as a function of epoch length, with the phase lag index and orthogonalized amplitude envelope correlation stabilizing at 12 and 6 second long epochs, respectively. Because Fraschini et al.'s [-@fraschinietal_EffectEpochLength_2016] results were based on broadband group-level mean functional connectivity, they are not directly comparable to our own findings; however, they do highlight how preprocessing decisions can (differentially) influence functional connectivity estimates. In the context of our study, we emphasize the need for future work to explore how preprocessing decisions can influence individual-level functional connectivity and network similarity estimates, with a focus on identifying approaches that can achieve both high within-individual and low between-individual functional connectome similarity.
 
 ## Consistency with related neurophysiological connectomics literature
 
-Consistent with previous EEG research on resting state networks [@samoginetal_FrequencyDependentFunctional_2020], we found that functional connectivity was strongest in the alpha band, which is likely due to the fact that alpha band oscillations are dominant during resting state <!--and are more strongly correlated with known resting state networks, such as the default-mode network-->[@mantinietal_ElectrophysiologicalSignaturesResting_2007; @marinoetal_HemodynamicCorrelatesElectrophysiological_2019]. Notably, the prominence of alpha band functional connectivity coincided with the strongest differences in functional connectome similarity within versus between individuals, which may indicate that EEG network variants are more sensitive to task state than fMRI network variants [cf. @grattonetal_FunctionalBrainNetworks_2018]. In support of this point, although we found that the relative strength of both within and between individual similarities generally shifted in the same direction at different timescales, the variability of these shifts was greater between than within individuals, indicating that functional connectomes became more differentiated between individuals as a function of timescale. The smaller changes we found within individuals were also consistent with previous EEG [@nentwichetal_FunctionalConnectivityEEG_2020], electrocorticography [ECoG\; @mostamesadaghiani_OscillationBasedConnectivityArchitecture_2021], and magnetoencephalography [MEG\; @colcloughetal_HowReliableAre_2016] research, which found that phase and amplitude coupling functional connectomes were generally stable within individuals, showing moderate to high similarity within and between sessions and states across timescales; with higher similarity for functional connectivity estimated with the orthogonalized amplitude envelope correlation than for the phase lag index as in @colcloughetal_HowReliableAre_2016.
+As we noted in the results section, both our phase coupling and amplitude coupling functional connectivity analyses performed as expected based on what has been reported in previous work using the phase lag index and orthogonalized amplitude envelope correlation with resting state EEG; thus, we assumed that our estimates were able to provide a sound representation of underlying (non-zero lag) global network activity for each participant and coupling mode. Specifically, consistent with previous work, we found (1) a high level of spatial correspondence between phase coupling and amplitude coupling functional connectomes (Figure \@ref(fig:illustrative-connectomes-figure)) [@mostamesadaghiani_PhaseAmplitudecouplingAre_2020]; (2) typical distributions of coupling magnitudes in each frequency band for both coupling modes that were right-skewed with a small mean and wide range (Figure \@ref(fig:connectivity-histograms-figure)) [@fraschinietal_RobustnessFunctionalConnectivity_2019; @laietal_ComparisonScalpSourcereconstructed_2018; @mehrkanoonetal_IntrinsicCouplingModes_2014]; and (3) a clear frequency band response was observed for both coupling modes (Figure \@ref(fig:connectivity-histograms-figure)), with the strongest coupling occurring in the alpha band for both the phase lag index [@hardmeieretal_ReproducibilityFunctionalConnectivity_2014; @mehrkanoonetal_IntrinsicCouplingModes_2014; @vandermolenetal_RestingStateEEGOscillatory_2014] and the orthogonalized amplitude envelope correlation [@hippetal_LargescaleCorticalCorrelation_2012; @mehrkanoonetal_IntrinsicCouplingModes_2014; @samoginetal_FrequencyDependentFunctional_2020; @samoginetal_AgeRelatedDifferencesFrequencyDependent_2022; @tabernaetal_DetectionRestingStateFunctional_2021].
+
+Notably, the prominence of alpha band functional connectivity coincided with the strongest differences in functional connectome similarity within versus between individuals observed in our study (Figure \@ref(fig:phase-similarity-plots-alpha)C), which may indicate that EEG network variants are more sensitive to brain state than fMRI network variants [cf. @grattonetal_FunctionalBrainNetworks_2018], given the well-documented relationship between brain state, dominant oscillation frequency, and coupling strength observed with neurophysiological recording methods. From this perspective, the clear frequency band response in our results may be unsurprising, as alpha oscillations are the most dominant rhythm during resting state and are known to play a prominent role in intrinsic connectivity networks [@mantinietal_ElectrophysiologicalSignaturesResting_2007; @marinoetal_HemodynamicCorrelatesElectrophysiological_2019; @sadaghianikleinschmidt_BrainNetworksAOscillations_2016; @samoginetal_FrequencyDependentFunctional_2020]. In support of this point, although we found that the relative strength of both within individual and between individual similarities generally shifted in the same direction from one frequency band to another, the magnitude of group-level differences in phase coupling functional connectome similarity within versus between individuals was not equivalent across frequency bands, indicating that functional connectomes became less or more differentiated between individuals as a function of frequency band.
+
+Furthermore, the pattern of group-level contrast results for phase coupling functional connectome similarities in the alpha band (Figure \@ref(fig:phase-similarity-plots-alpha)C) appeared to be influenced more by an individual-state effect than an individual-session effect (Figure \@ref(fig:outcome-plot), fourth plot); whereas (although subtle) the delta, theta, beta, and gamma bands (Figures \@ref(fig:phase-similarity-plots-delta)C, \@ref(fig:phase-similarity-plots-theta)C, \@ref(fig:phase-similarity-plots-beta)C, \@ref(fig:phase-similarity-plots-gamma)C) appeared to be influenced more by an individual-session effect than an individual-state effect (Figure \@ref(fig:outcome-plot), third plot). Although we did not predict this outcome, it may also be unsurprising, given that the typical widespread reduction in alpha band oscillations between eyes-closed and eyes-open resting state and associated changes in functional connectivity would be expected to produce such a pattern of results given that, within individuals, functional connectomes would be noticeably dissimilar between these states, on average, but similar within them; whereas the more subtle differences between eyes-closed and eyes-open resting state for other frequency bands would be less likely to produce such noticeable changes. 
 
 Our results are also conceptually consistent with a recent study by @nentwichetal_FunctionalConnectivityEEG_2020, who investigated the relationship between twelve phenotypic variables (age, sex, socioeconomic status, intelligence, and diagnostic assessments for sleep disturbance, behavioural and emotional problems, attention-deficit/hyperactivity disorder, anxiety, inattention, mood, internet addiction, distress tolerance) and phase coupling functional connectome similarities in a large sample of typically and atypically developing children and adolescents during resting in the delta, theta, alpha, and beta bands. They found that all twelve variables were unable to explain variation in functional connectome similarities between and among individuals in the delta, theta, alpha, and beta bands; with the exception of sex and age in the beta band. Although our study did not examine the relationship between any variables of interest and functional connectome similarity, the findings of @nentwichetal_FunctionalConnectivityEEG_2020 indicate---similar to our findings---that (1) functional connectomes may become more differentiated between individuals as a function of frequency band, given they only found phenotype-connectome relationships in the beta band; and (2) network variants may be harder to detect with EEG. Regarding the latter point, @nentwichetal_FunctionalConnectivityEEG_2020 also investigated the relationship between the aforementioned twelve variables and fMRI functional connectome similarities in the same sample. Here they found that four variables (age, sex, intelligence, and the assessment for behavioural and emotional problems) were able to explain variation in functional connectome similarities between and among individuals, suggesting that fMRI functional connectomes may better capture practically relevant information compared to EEG.
 
-<!-- Less clear, however, is how our findings relate to previous EEG research demonstrating that resting state functional connectomes are unique to individuals and can be used to distinguish between them [@laroccaetal_HumanBrainDistinctiveness_2014].  -->
-
-<!-- Consistent with previous EEG [@nentwichetal_FunctionalConnectivityEEG_2020], electrocorticography [ECoG; @mostamesadaghiani_OscillationBasedConnectivityArchitecture_2021], and magnetoencephalography [MEG; @colcloughetal_HowReliableAre_2016] research, we found that phase and amplitude coupling functional connectomes were generally stable within individuals, showing moderate to high similarity within and between sessions and states across timescales. Additionally, as in @colcloughetal_HowReliableAre_2016, we found that this effect was stronger for functional connectivity estimated with the orthogonalized amplitude envelope correlation than for the phase lag index.  -->
+Finally, the smaller variations in within-individual functional connectome similarity across sessions and states observed in our sample were also consistent with previous EEG [@nentwichetal_FunctionalConnectivityEEG_2020], electrocorticography [ECoG\; @mostamesadaghiani_OscillationBasedConnectivityArchitecture_2021], and magnetoencephalography [MEG\; @colcloughetal_HowReliableAre_2016] research, which found that phase coupling and amplitude coupling functional connectomes were generally stable within individuals, showing moderate to high similarity within and between sessions and states across frequency bands. Additionally, in agreement with @colcloughetal_HowReliableAre_2016, we found that within-individual functional connectome similarity was generally higher when functional connectivity was estimated with the orthogonalized amplitude envelope correlation than with the phase lag index.
 
 ## Factors that may contribute to differences between EEG and fMRI
 
@@ -39,7 +44,7 @@ Network variants are likely sensitive to the spatial resolution of the neuroimag
 
 Network variants are also likely sensitive to the methods used to estimate functional connectivity. There are two assumptions related to this that are important to consider when evaluating our results, and which may be worth investigating in future research. First, we assumed that five minute recordings would be sufficient to get stable functional connectivity estimates with EEG given that (1) the longer scanning times needed to reliably detect network variants with fMRI is related to its low sampling rate [@seitzmanetal_TraitlikeVariantsHuman_2019], and not to the actual timeframe at which neural processes occur; and (2) EEG samples a substantially larger number of time points than fMRI in a much shorter timeframe. Because we found that functional connectomes were generally stable within individuals, showing moderate to high similarity within and between sessions and states across timescales, we believe this assumption was justified. However, we do note that longer recordings have been found to improve the stability of fMRI functional connectivity estimates in a qualitatively distinct way from higher sampling rates [@birnetal_EffectScanLength_2013], likely due to slow network changes being more fully captured by longer recordings. Future work may benefit from testing if the stability of EEG functional connectivity estimates gain a similar improvement from longer recordings, particularly at slower timescales such as the delta band.
 
-Second, we assumed that network variants could be observed when considering only phase and amplitude coupling with non-zero lag, discounting the true zero-lag coupling that occurs in functional networks. However, this discounting leads to an underestimation of true connectivity for both the phase lag index and amplitude envelope correlation by a non-trivial amount [@hippetal_LargescaleCorticalCorrelation_2012; @stametal_PhaseLagIndex_2007], and might also remove or attenuate individual-specific features of the functional connectome [@fraschinietal_RobustnessFunctionalConnectivity_2019]. Given that we generally found the strongest similarities between functional connectomes with homogeneously low patterns of coupling, non-zero lag phase and amplitude coupling methods may not be feasible for studying network variants at timescales where coupling is expected to be generally lower for a given state or task. The most extreme examples of this in our study were with amplitude coupling functional connectomes in the delta, theta, beta, and gamma bands, where we found that surprisingly high similarity within and between individuals was associated with functional connectomes with surprisingly low coupling across sensors for all connectomes. Because of the homogeneously low patterns of coupling, we would argue that these cases of high similarity are not particularly interesting, and should likely be treated as a methodological artifact.
+Second, we assumed that network variants could be observed when considering only phase and amplitude coupling with non-zero lag, discounting the true zero-lag coupling that occurs in functional networks. However, this discounting leads to an underestimation of true connectivity for both the phase lag index and amplitude envelope correlation by a non-trivial amount [@hippetal_LargescaleCorticalCorrelation_2012; @stametal_PhaseLagIndex_2007], and might also remove or attenuate individual-specific features of the functional connectome [@fraschinietal_RobustnessFunctionalConnectivity_2019]. Given that we generally found the strongest similarities between functional connectomes with homogeneously low patterns of coupling, non-zero lag phase and amplitude coupling methods may not be feasible for studying network variants at timescales where coupling is expected to be generally lower for a given state or task. The most extreme examples of this in our study were with amplitude coupling functional connectomes in the delta, theta, beta, and gamma bands, where we found that surprisingly high similarity within and between individuals was associated with functional connectomes with surprisingly low coupling across sensors for all connectomes. Because of the homogeneously low patterns of coupling, we would argue that these cases of high similarity are not particularly interesting, and should likely be treated as a methodological artifact. <!-- TODO: revise this -->
 
 One potential solution to avoid homogeneously low patterns of coupling would be to use phase and amplitude coupling methods that include zero-lag coupling---supplemented with tests against volume conduction [@cohen_AnalyzingNeuralTime_2014]. However, this approach is impractical for EEG connectomics research since it requires inspecting hundreds of thousands of individual connections to rule out possible contamination by volume conduction. Another potential solution would be to use non-zero lag coupling methods that might underestimate true connectivity by a lesser amount, such as the weighted phase lag index [@vincketal_ImprovedIndexPhasesynchronization_2011] for phase coupling. We are not aware of an equivalent weighted non-zero lag method for amplitude coupling. For future work, this may mean that in cases where it is impractical to estimate zero-lag amplitude coupling with tests against volume conduction, it may be better not to use amplitude coupling methods at all. Regardless, the spatial mixing caused by volume conduction poses a difficult problem, and future work may benefit from testing the robustness of different functional connectivity methods for studying network variants with EEG [for a related example using magnetoencephalography, see @colcloughetal_HowReliableAre_2016].
 
