--- a/manuscripts/child-documents/results.Rmd
+++ b/manuscripts/child-documents/results.Rmd
@@ -7,14 +7,16 @@ The results section is split into three parts. In the first part, we provide a b
 Figure \@ref(fig:illustrative-connectomes-figure) shows the results from the functional connectivity analyses for a single illustrative recording. Note that although the strength of coupling differs between the phase lag index (Figure \@ref(fig:illustrative-connectomes-figure)A) and the amplitude envelope correlation (Figure \@ref(fig:illustrative-connectomes-figure)B), the two coupling modes are qualitatively similar in their spatial organization. This level of spatial correspondence between phase coupling and amplitude coupling functional connectomes during resting state is in agreement with previous published published work [@mostamesadaghiani_PhaseAmplitudecouplingAre_2020]. We selected this recording for illustrative purposes because the spatial correspondence between its phase coupling and amplitude coupling functional connectome was particularly obvious; however, we emphasize that this observation was generally consistent across recordings and frequency bands for all participants (see Phase Coupling Functional Connectomes, Amplitude Coupling Functional Connectomes, and Phase Coupling Functional Connectomes [Hilbert transform] in the Supplementary Material available online).
 
 ```{r illustrative-connectomes-figure}
+#| fig.height: 2.7227169291
 #| fig.cap: "Results of the phase coupling (A) and amplitude coupling (B) functional connectivity analyses for a single illustrative recording (participant P16, session 3, eyes open 2, delta band). For each functional connectome, EEG channels are ordered as follows (from left to right, and from top to bottom): Fp1, Fp2, AF7, AF3, AFz, AF4, AF8, F7, F5, F3, F1, Fz, F2, F4, F6, F8, FT9, FT7, FC5, FC3, FC1, FCz, FC2, FC4, FC6, FT8, FT10, T7, C5, C3, C1, Cz, C2, C4, C6, T8, TP9, TP7, CP5, CP3, CP1, CPz, CP2, CP4, CP6, TP8, TP10, P7, P5, P3, P1, Pz, P2, P4, P6, P8, PO7, PO3, POz, PO4, PO8, O1, Oz, O2."
 targets::tar_load(illustrative_connectomes_figure)
 knitr::include_graphics(here::here(illustrative_connectomes_figure))
 ```
 
-Figure \@ref(fig:connectivity-histograms-figure) shows the distribution of coupling magnitudes in each frequency band across all recordings and EEG channel pairs, organized by participant. Descriptive statistics summarizing each of these distributions are shown in Table \@ref(tab:connectivity-summary-table). The small mean, wide range, and right-skew of phase lag index (Figure \@ref(fig:connectivity-histograms-figure)A) and amplitude envelope correlation (Figure \@ref(fig:connectivity-histograms-figure)B) estimates in each frequency band were in agreement with previous published published work [e.g., @fraschinietal_RobustnessFunctionalConnectivity_2019; @laietal_ComparisonScalpSourcereconstructed_2018; @mehrkanoonetal_IntrinsicCouplingModes_2014], and can be explained in part by the underestimation of true connectivity inherent to each of these metrics due to their discounting of true zero lag interactions [@cohen_EffectsTimeLag_2015; @fraschinietal_RobustnessFunctionalConnectivity_2019; @hippetal_LargescaleCorticalCorrelation_2012; @stametal_PhaseLagIndex_2007]. Additionally, a clear frequency band response was observed for both coupling modes, with the strongest coupling occurring in the alpha band for each metric. This was unsurprising, as alpha oscillations are known to play a prominent role in intrinsic connectivity networks [@mantinietal_ElectrophysiologicalSignaturesResting_2007; @marinoetal_HemodynamicCorrelatesElectrophysiological_2019; @sadaghianikleinschmidt_BrainNetworksAOscillations_2016; @samoginetal_FrequencyDependentFunctional_2020], and greater coupling in the alpha band relative to other frequency bands during resting state has been reported in previously published work using both the phase lag index [@hardmeieretal_ReproducibilityFunctionalConnectivity_2014; @mehrkanoonetal_IntrinsicCouplingModes_2014; @vandermolenetal_RestingStateEEGOscillatory_2014] and the orthogonalized amplitude envelope correlation [@hippetal_LargescaleCorticalCorrelation_2012; @mehrkanoonetal_IntrinsicCouplingModes_2014; @samoginetal_FrequencyDependentFunctional_2020; @samoginetal_AgeRelatedDifferencesFrequencyDependent_2022; @tabernaetal_DetectionRestingStateFunctional_2021]. 
+Figure \@ref(fig:connectivity-histograms-figure) shows the distribution of coupling magnitudes in each frequency band across all recordings and EEG channel pairs, organized by participant. Descriptive statistics summarizing each of these distributions are shown in Table \@ref(tab:connectivity-summary-table). The small mean, wide range, and right-skew of phase lag index (Figure \@ref(fig:connectivity-histograms-figure)A) and amplitude envelope correlation (Figure \@ref(fig:connectivity-histograms-figure)B) estimates in each frequency band were in agreement with previous published published work [e.g., @fraschinietal_RobustnessFunctionalConnectivity_2019; @laietal_ComparisonScalpSourcereconstructed_2018; @mehrkanoonetal_IntrinsicCouplingModes_2014], and can be explained in part by the underestimation of true connectivity inherent to each of these metrics due to their discounting of true zero lag interactions [@cohen_EffectsTimeLag_2015; @fraschinietal_RobustnessFunctionalConnectivity_2019; @hippetal_LargescaleCorticalCorrelation_2012; @stametal_PhaseLagIndex_2007]. Additionally, a clear frequency band response was observed for both coupling modes, with the strongest coupling occurring in the alpha band for each metric. This was unsurprising, as alpha oscillations are known to play a prominent role in intrinsic connectivity networks [@mantinietal_ElectrophysiologicalSignaturesResting_2007; @marinoetal_HemodynamicCorrelatesElectrophysiological_2019; @sadaghianikleinschmidt_BrainNetworksAOscillations_2016; @samoginetal_FrequencyDependentFunctional_2020], and greater coupling in the alpha band relative to other frequency bands during resting state has been reported in previously published work using both the phase lag index [@hardmeieretal_ReproducibilityFunctionalConnectivity_2014; @mehrkanoonetal_IntrinsicCouplingModes_2014; @vandermolenetal_RestingStateEEGOscillatory_2014] and the orthogonalized amplitude envelope correlation [@hippetal_LargescaleCorticalCorrelation_2012; @mehrkanoonetal_IntrinsicCouplingModes_2014; @samoginetal_FrequencyDependentFunctional_2020; @samoginetal_AgeRelatedDifferencesFrequencyDependent_2022; @tabernaetal_DetectionRestingStateFunctional_2021].
 
 ```{r connectivity-histograms-figure}
+#| fig.height: 5.445434
 #| fig.cap: Distribution of phase lag index (A) and amplitude envelope correlation (B) estimates across all recordings and EEG channel pairs in each frequency band. Note that the scale of the y-axis is free across panels. The marginal rug beneath each histogram shows the observed coupling estimates.
 targets::tar_load(connectivity_histogram_patchwork_figure)
 knitr::include_graphics(here::here(connectivity_histogram_patchwork_figure))
@@ -38,13 +40,17 @@ Finally, note that although amplitude envelope correlation estimates were genera
 
 ## Phase coupling functional connectome similarity analyses
 
+```{r}
+knitr::opts_chunk$set(fig.height = 5.445434)
+```
+
 ### Delta
 
 Figure \@ref(fig:phase-similarity-plots-delta)A shows the connectivity profiles for all phase coupling functional connectomes in the delta band, organized by participant and recording. Plots and summary statistics of the distribution of coupling magnitudes across all recordings and EEG channel pairs are shown above in Figure \@ref(fig:connectivity-histograms-figure) and Table \@ref(tab:connectivity-summary-table), respectively.
 
 Figure \@ref(fig:phase-similarity-plots-delta)B shows the functional connectome similarity estimates between all pairs of phase coupling functional connectomes in the delta band. There was a visually obvious group effect, with high similarity between functional connectomes regardless of participant, session, or state. This was supported by the group-level contrast results in Figure \@ref(fig:phase-similarity-plots-delta)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, ranged from practically nil to at most small. Table \@ref(tab:phase-similarity-table-delta) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most small) positive differences in functional connectome similarity can be attributed to individual-dependent factors with slight modulations by session and state. Jointly, these results suggest that, on average, the phase coupling dynamics of underlying global network activity in the delta band was differentiated between individuals across contexts, but with only a slight, negligible influence of individual-dependent factors over and above the influence of stable group-dependent factors.
 
-These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figure \@ref(fig:phase-similarity-plots-hilbert-delta)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; and (3) differences in functional connectome similarity were generally smaller, but were still positive with a similar pattern of variation across contexts. Likewise, the contrast results remained consistent between the reduced and maximal models of functional connectome similarity when the phase lag index was estimated using the Hilbert transform method (Figure \@ref(fig:phase-similarity-plots-hilbert-maximal-delta)), but with slightly more uncertainty in the estimates. The maximal model of functional connectome similarity did not converge when the phase lag index was estimated using the multitaper method (Table \@ref(tab:convergence-check-table)). 
+These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figure A\@ref(fig:phase-similarity-plots-hilbert-delta)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; and (3) differences in functional connectome similarity were generally smaller, but were still positive with a similar pattern of variation across contexts. Likewise, the contrast results remained consistent between the reduced and maximal models of functional connectome similarity when the phase lag index was estimated using the Hilbert transform method (Figure A\@ref(fig:phase-similarity-plots-hilbert-maximal-delta)), but with slightly more uncertainty in the estimates. The maximal model of functional connectome similarity did not converge when the phase lag index was estimated using the multitaper method (Table A\@ref(tab:convergence-check-table)). 
 
 ```{r phase-similarity-plots-delta}
 #| fig.cap: "Results of phase coupling analyses in the delta band: (A) connectivity profiles for all functional connectomes, organized by participant and recording; (B) estimates of functional connectome similarity between all pairs of functional connectomes, organized by participant and recording; and (C) group-level contrasts estimating the average difference in functional connectome similarity within and between participants across contexts."
@@ -65,7 +71,7 @@ Figure \@ref(fig:phase-similarity-plots-theta)A shows the connectivity profiles 
 
 Figure \@ref(fig:phase-similarity-plots-theta)B shows the functional connectome similarity estimates between all pairs of phase coupling functional connectomes in the theta band. There was a visually obvious group effect, with high similarity between functional connectomes regardless of participant, session, or state. This was supported by the group-level contrast results in Figure \@ref(fig:phase-similarity-plots-theta)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, were at most small. Table \@ref(tab:phase-similarity-table-theta) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most small) positive differences in functional connectome similarity can be attributed to individual-dependent factors with slight modulations by session and state. Jointly, these results suggest that, on average, the phase coupling dynamics of underlying global network activity in the theta band was differentiated between individuals across contexts, but with only a slight influence of individual-dependent factors over and above the influence of stable group-dependent factors.
 
-These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figure \@ref(fig:phase-similarity-plots-hilbert-theta)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; and (3) differences in functional connectome similarity were generally of similar magnitudes, with the exception of the within sessions and between states contrast which was visibly smaller. Likewise, the contrast results remained consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using both the multitaper method (Figure \@ref(fig:phase-similarity-plots-maximal-theta)) and the Hilbert transform method (Figure \@ref(fig:phase-similarity-plots-hilbert-maximal-theta)), but with slightly more uncertainty in the estimates.
+These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figure A\@ref(fig:phase-similarity-plots-hilbert-theta)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; and (3) differences in functional connectome similarity were generally of similar magnitudes, with the exception of the within sessions and between states contrast which was visibly smaller. Likewise, the contrast results remained consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using both the multitaper method (Figure A\@ref(fig:phase-similarity-plots-maximal-theta)) and the Hilbert transform method (Figure A\@ref(fig:phase-similarity-plots-hilbert-maximal-theta)), but with slightly more uncertainty in the estimates.
 
 ```{r phase-similarity-plots-theta}
 #| fig.cap: "Results of phase coupling analyses in the theta band: (A) connectivity profiles for all functional connectomes, organized by participant and recording; (B) estimates of functional connectome similarity between all pairs of functional connectomes, organized by participant and recording; and (C) group-level contrasts estimating the average difference in functional connectome similarity within and between participants across contexts."
@@ -88,7 +94,7 @@ Figure \@ref(fig:phase-similarity-plots-alpha)B shows the functional connectome 
 
 However, despite the presence of more visually apparent individual effects, there was still a strong group effect. This was supported by the group-level contrast results in Figure \@ref(fig:phase-similarity-plots-alpha)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, were still at most small. Table \@ref(tab:phase-similarity-table-alpha) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most small) positive differences in functional connectome similarity can be attributed to individual-dependent factors with small modulations by session and state. Jointly, these results suggest that, on average, the phase coupling dynamics of underlying global network activity in the alpha band was differentiated between individuals across contexts, but with only a small influence of individual-dependent factors over and above the influence of stable group-dependent factors.
 
-These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figure \@ref(fig:phase-similarity-plots-hilbert-alpha)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; and (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; however, differences in functional connectome similarity were generally of similar magnitudes. Likewise, the contrast results remained consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using both the multitaper method (Figure \@ref(fig:phase-similarity-plots-maximal-alpha)) and the Hilbert transform method (Figure \@ref(fig:phase-similarity-plots-hilbert-maximal-alpha)), but with slightly more uncertainty in the estimates.
+These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figure A\@ref(fig:phase-similarity-plots-hilbert-alpha)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; and (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; however, differences in functional connectome similarity were generally of similar magnitudes. Likewise, the contrast results remained consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using both the multitaper method (Figure A\@ref(fig:phase-similarity-plots-maximal-alpha)) and the Hilbert transform method (Figure A\@ref(fig:phase-similarity-plots-hilbert-maximal-alpha)), but with slightly more uncertainty in the estimates.
 
 ```{r phase-similarity-plots-alpha}
 #| fig.cap: "Results of phase coupling analyses in the alpha band: (A) connectivity profiles for all functional connectomes, organized by participant and recording; (B) estimates of functional connectome similarity between all pairs of functional connectomes, organized by participant and recording; and (C) group-level contrasts estimating the average difference in functional connectome similarity within and between participants across contexts."
@@ -109,7 +115,7 @@ Figure \@ref(fig:phase-similarity-plots-beta)A shows the connectivity profiles f
 
 Figure \@ref(fig:phase-similarity-plots-beta)B shows the functional connectome similarity estimates between all pairs of phase coupling functional connectomes in the beta band. There was a visually obvious group effect, with high similarity between functional connectomes regardless of participant, session, or state. This was supported by the group-level contrast results in Figure \@ref(fig:phase-similarity-plots-beta)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, were at most small. Table \@ref(tab:phase-similarity-table-beta) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most small) positive differences in functional connectome similarity can be attributed to individual-dependent factors with slight modulations by session and state. Jointly, these results suggest that, on average, the phase coupling dynamics of underlying global network activity in the beta band was differentiated between individuals across contexts, but with only a slight influence of individual-dependent factors over and above the influence of stable group-dependent factors.
 
-These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figure \@ref(fig:phase-similarity-plots-hilbert-beta)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; and (3) differences in functional connectome similarity were generally smaller, but were still positive with a similar pattern of variation across contexts. Likewise, the contrast results remained consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using both the multitaper method (Figure \@ref(fig:phase-similarity-plots-maximal-beta)) and the Hilbert transform method (Figure \@ref(fig:phase-similarity-plots-hilbert-maximal-beta)), but with slightly more uncertainty in the estimates.
+These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figure A\@ref(fig:phase-similarity-plots-hilbert-beta)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; and (3) differences in functional connectome similarity were generally smaller, but were still positive with a similar pattern of variation across contexts. Likewise, the contrast results remained consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using both the multitaper method (Figure A\@ref(fig:phase-similarity-plots-maximal-beta)) and the Hilbert transform method (Figure A\@ref(fig:phase-similarity-plots-hilbert-maximal-beta)), but with slightly more uncertainty in the estimates.
 
 ```{r phase-similarity-plots-beta}
 #| fig.cap: "Results of phase coupling analyses in the beta band: (A) connectivity profiles for all functional connectomes, organized by participant and recording; (B) estimates of functional connectome similarity between all pairs of functional connectomes, organized by participant and recording; and (C) group-level contrasts estimating the average difference in functional connectome similarity within and between participants across contexts."
@@ -130,7 +136,7 @@ Figure \@ref(fig:phase-similarity-plots-gamma)A shows the connectivity profiles 
 
 Figure \@ref(fig:phase-similarity-plots-gamma)B shows the functional connectome similarity estimates between all pairs of phase coupling functional connectomes in the gamma band. There was a visually obvious group effect, with high similarity between functional connectomes regardless of participant, session, or state. This was supported by the group-level contrast results in Figure \@ref(fig:phase-similarity-plots-gamma)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, ranged from practically nil to at most small. Table \@ref(tab:phase-similarity-table-gamma) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most small) positive differences in functional connectome similarity can be attributed to individual-dependent factors with slight modulations by session and state. Jointly, these results suggest that, on average, the phase coupling dynamics of underlying global network activity in the gamma band was differentiated between individuals across contexts, but with only a slight, negligible influence of individual-dependent factors over and above the influence of stable group-dependent factors.
 
-These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figure \@ref(fig:phase-similarity-plots-hilbert-gamma)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; and (3) differences in functional connectome similarity were generally smaller, but were still positive with a similar pattern of variation across contexts. Likewise, the contrast results remained largely consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using both the multitaper method (Figure \@ref(fig:phase-similarity-plots-maximal-gamma)) and the Hilbert transform method (Figures \@ref(fig:phase-similarity-plots-hilbert-maximal-gamma)), but with slightly more uncertainty in the estimates. This increased uncertainty resulted in the direction of the between sessions, between sessions and within states, and between sessions and states contrasts to become unresolved. However, the difference in interpretation between the maximal model and reduced model results here was minor: The maximal model simply requires the qualification that the differences in functional connectome similarity within and between participants most compatible with our data for these contrasts, given the background model, also included the possibility of (essentially) zero difference.
+These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figure A\@ref(fig:phase-similarity-plots-hilbert-gamma)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; and (3) differences in functional connectome similarity were generally smaller, but were still positive with a similar pattern of variation across contexts. Likewise, the contrast results remained largely consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using both the multitaper method (Figure A\@ref(fig:phase-similarity-plots-maximal-gamma)) and the Hilbert transform method (Figures A\@ref(fig:phase-similarity-plots-hilbert-maximal-gamma)), but with slightly more uncertainty in the estimates. This increased uncertainty resulted in the direction of the between sessions, between sessions and within states, and between sessions and states contrasts to become unresolved. However, the difference in interpretation between the maximal model and reduced model results here was minor: The maximal model simply requires the qualification that the differences in functional connectome similarity within and between participants most compatible with our data for these contrasts, given the background model, also included the possibility of (essentially) zero difference.
 
 ```{r phase-similarity-plots-gamma}
 #| fig.cap: "Results of phase coupling analyses in the gamma band: (A) connectivity profiles for all functional connectomes, organized by participant and recording; (B) estimates of functional connectome similarity between all pairs of functional connectomes, organized by participant and recording; and (C) group-level contrasts estimating the average difference in functional connectome similarity within and between participants across contexts."
@@ -155,7 +161,7 @@ Figure \@ref(fig:amplitude-similarity-plots-alpha)B shows the functional connect
 
 This was supported by the group-level contrast results in Figure \@ref(fig:amplitude-similarity-plots-alpha)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, ranged from practically nil to at most small. Table \@ref(tab:amplitude-similarity-table-alpha) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most small) positive differences in functional connectome similarity can be attributed to individual-dependent factors with small modulations by session and state. Jointly, these results suggest that, on average, the amplitude coupling dynamics of underlying global network activity in the alpha band was differentiated between individuals across contexts, but with only a slight, negligible influence of individual-dependent factors over and above the influence of stable group-dependent factors.
 
-The contrast results remained largely consistent between the reduced and maximal mixed beta regression models of functional connectome similarity, but with slightly more uncertainty in the estimates (Figure \@ref(fig:amplitude-similarity-plots-maximal-alpha)). This increased uncertainty resulted in the direction of the between sessions and states contrast to become unresolved. However, the difference in interpretation between the maximal model and reduced model results here was minor: The maximal model simply requires the qualification that the differences in functional connectome similarity within and between participants most compatible with our data for this contrast, given the background model, also included the possibility of (essentially) zero difference.
+The contrast results remained largely consistent between the reduced and maximal mixed beta regression models of functional connectome similarity, but with slightly more uncertainty in the estimates (Figure A\@ref(fig:amplitude-similarity-plots-maximal-alpha)). This increased uncertainty resulted in the direction of the between sessions and states contrast to become unresolved. However, the difference in interpretation between the maximal model and reduced model results here was minor: The maximal model simply requires the qualification that the differences in functional connectome similarity within and between participants most compatible with our data for this contrast, given the background model, also included the possibility of (essentially) zero difference.
 
 ```{r amplitude-similarity-plots-alpha}
 #| fig.cap: "Results of amplitude coupling analyses in the alpha band: (A) connectivity profiles for all functional connectomes, organized by participant and recording; (B) estimates of functional connectome similarity between all pairs of functional connectomes, organized by participant and recording; and (C) group-level contrasts estimating the average difference in functional connectome similarity within and between participants across contexts."
@@ -170,13 +176,14 @@ targets::tar_read(amplitude_similarity_contrasts_table_nhst_alpha)
 
 ### Delta, Theta, Beta, and Gamma
 
-Although we conducted all analyses for the delta, theta, beta, and gamma bands, we refrain from interpreting the results of these analyses here based on a post-hoc suggestion from a committee member; however, for transparency, the results for these frequency bands are shown in Figure \@ref(fig:amplitude-similarity-delta-theta-beta-gamma) in Appendix A. In short, the rationale behind this decision was that the functional connectome similarity analyses for these frequency bands appeared misleading, due to an unforeseen limitation of our approach to quantifying functional connectome similarity. Specifically---although the distribution of amplitude envelope correlation estimates in each of these frequency bands was in agreement with previous published published work [e.g., @fraschinietal_RobustnessFunctionalConnectivity_2019; @laietal_ComparisonScalpSourcereconstructed_2018; @mehrkanoonetal_IntrinsicCouplingModes_2014]---any qualitatively distinct differences in spatial organization between any pair of functional connectomes was overshadowed by the fact that the relative position of the observations in each connectome were very close together in space, resulting in very high to near-perfect estimates of functional connectome similarity across participants, sessions, and states. While these estimates are a statistically valid reflection of the data, we felt that they were neurophysiologically unrealistic, greatly exaggerating the magnitude of similarity between any pair of functional connectomes and failing to capture the intended nuance across participants, sessions, and states.
+Although we conducted all analyses for the delta, theta, beta, and gamma bands, we refrain from interpreting the results of these analyses here based on a post-hoc suggestion from a committee member; however, for transparency, the results for these frequency bands are shown in Figure A\@ref(fig:amplitude-similarity-delta-theta-beta-gamma) in Appendix A. In short, the rationale behind this decision was that the functional connectome similarity analyses for these frequency bands appeared misleading, due to an unforeseen limitation of our approach to quantifying functional connectome similarity. Specifically---although the distribution of amplitude envelope correlation estimates in each of these frequency bands was in agreement with previous published published work [e.g., @fraschinietal_RobustnessFunctionalConnectivity_2019; @laietal_ComparisonScalpSourcereconstructed_2018; @mehrkanoonetal_IntrinsicCouplingModes_2014]---any qualitatively distinct differences in spatial organization between any pair of functional connectomes was overshadowed by the fact that the relative position of the observations in each connectome were very close together in space, resulting in very high to near-perfect estimates of functional connectome similarity across participants, sessions, and states. While these estimates are a statistically valid reflection of the data, we felt that they were neurophysiologically unrealistic, greatly exaggerating the magnitude of similarity between any pair of functional connectomes and failing to capture the intended nuance across participants, sessions, and states.
 
 ## Outcome variability of functional connectome similarity contrasts
 
-Figure \@ref(fig:subset-similarity-contrast-barplot) summarizes the results of the individual-level phase coupling and amplitude coupling functional connectome similarity contrasts in each frequency band, respectively, showing the proportion of participants whose 95% compatibility intervals for a given contrast were positive, unresolved, or negative. The effect sizes corresponding to these results are shown in Figures \@ref(fig:phase-similarity-subset-plots-delta) to \@ref(fig:amplitude-similarity-subset-plots-alpha) in Appendix A. Note that across all frequency bands and contrasts there was a mixture of participants whose most compatible effect sizes, given the background model, were unresolved or positive, with a smaller portion of negative effect sizes. Thus, although the group-level contrast results for both phase coupling and amplitude coupling functional connectomes across all frequency bands suggested that, on average, differences in functional connectome similarity may have been influenced to a slight or at most small extent by individual-dependent factors---this relationship was not necessarily true at an individual-level for all participants.[^8] 
+Figure \@ref(fig:subset-similarity-contrast-barplot) summarizes the results of the individual-level phase coupling and amplitude coupling functional connectome similarity contrasts in each frequency band, respectively, showing the proportion of participants whose 95% compatibility intervals for a given contrast were positive, unresolved, or negative. The effect sizes corresponding to these results are shown in Figures A\@ref(fig:phase-similarity-subset-plots-delta)-A\@ref(fig:amplitude-similarity-subset-plots-alpha) in Appendix A. Note that across all frequency bands and contrasts there was a mixture of participants whose most compatible effect sizes, given the background model, were unresolved or positive, with a smaller portion of negative effect sizes. Thus, although the group-level contrast results for both phase coupling and amplitude coupling functional connectomes across all frequency bands suggested that, on average, differences in functional connectome similarity may have been influenced to a slight or at most small extent by individual-dependent factors---this relationship was not necessarily true at an individual-level for all participants.[^8] 
 
 ```{r subset-similarity-contrast-barplot}
+#| fig.height: 5.445434
 #| fig.cap: Stacked bar plots showing the proportion of individual participants whose 95% compatibility intervals for the phase coupling (A) and amplitude coupling (B) functional connectome similarity contrasts were positive, unresolved, or negative in each frequency band.
 targets::tar_load(subset_similarity_contrast_barplot_figure)
 knitr::include_graphics(
